<resources>
    <string name="app_name">Load App</string>
    <string name="glide_text">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_text">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc.</string>
    <string name="Glide">https://github.com/bumptech/glide</string>
    <string name="LoadApp">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="Retrofit">https://github.com/square/retrofit</string>
    <string name="file_name">File Name : </string>
    <string name="ok">OK</string>
    <string name="status">Status : </string>
    <string name="button_download">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="action">action</string>
    <string name="notification_button">See changes</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>

</resources>