<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/cloud_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/download_cloud_image"
            app:layout_constraintBottom_toTopOf="@+id/radioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@+id/loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cloud_image">

            <RadioButton
                android:id="@+id/glide_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/glide_text"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/load_app_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/load_app_text"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/retrofit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/retrofit_text"
                android:textSize="26sp" />
        </RadioGroup>


        <com.example.loadapp.LoadingButton
            android:id="@+id/loading"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>