<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsActivity">

        <LinearLayout
            android:id="@+id/file_name_liner"
            android:layout_width="0dp"
            android:layout_margin="32dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/file_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/file_name"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/file_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="ddddddd"
                android:textSize="22sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/status_liner"
            android:layout_width="0dp"
            android:layout_margin="32dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/file_name_liner"
            android:orientation="horizontal"

            >

            <TextView
                android:id="@+id/status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="dd"
                android:textSize="22sp" />
        </LinearLayout>

        <Button
            android:id="@+id/ok_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>